removed style from nav

--- a/MaturityWeb/Views/Shared/_Layout.cshtml
+++ b/MaturityWeb/Views/Shared/_Layout.cshtml
@@ -36,13 +36,13 @@
                             <a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Index" aria-current="page"><i style="text-shadow:2px 2px 4px #000000">Home</i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link"  asp-controller="Registers" asp-action="LoginUser" ><i style="text-shadow:2px 2px 4px #000000">Login</i></a>
+                            <a class="nav-link"  asp-controller="Registers" asp-action="LoginUser" ><i>Login</i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Registers" asp-action="Add"><i style="text-shadow:2px 2px 4px #000000">Register</i></a>
+                            <a class="nav-link" asp-controller="Registers" asp-action="Add"><i>Register</i></a>
                         </li>
                           <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="About"><i style="text-shadow:2px 2px 4px #000000">About</i></a>
+                            <a class="nav-link" asp-controller="Home" asp-action="About"><i>About</i></a>
                         </li>
                     </ul>
                  
