--- a/MaturityWeb/Views/Home/About.cshtml
+++ b/MaturityWeb/Views/Home/About.cshtml
@@ -117,7 +117,7 @@
     <img style="width:300px;height:400px" class="img-responsive" src="~/css/NewFolder/img8.jpeg" alt="">
     <div class="captn">
         <div class="captn-top">
-            <h4 style="text-shadow:2px 2px 4px "><i>Ankit Sahoo</i> </h4>
+            <h4 style="text-shadow:2px 2px 4px "><i>Ankit Kumar Sahoo</i> </h4>
 
         </div>
     </div>
