--- a/MaturityWeb/Views/Shared/_Layout.cshtml
+++ b/MaturityWeb/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Index" aria-current="page"><i style="text-shadow:2px 2px 4px #000000">Home</i></a>
+                            <a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Index" aria-current="page"><i>Home</i></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link"  asp-controller="Registers" asp-action="LoginUser" ><i>Login</i></a>
